# RockBot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RUNLOG.md  SPEC.md  SPEC_gap.md  STATUS.md  _tool_comparison.md
.github/workflows/: build.yml  ci.yml  preview.yml  release.yml
crates/krabbykrus/: Cargo.toml
crates/krabbykrus-channels/: Cargo.toml
crates/krabbykrus-channels/src/: discord.rs  lib.rs  telegram.rs
crates/krabbykrus-cli/: Cargo.toml
crates/krabbykrus-cli/src/commands/: config.rs  gateway.rs  vault_unlock.rs
crates/krabbykrus-cli/src/tui/: app.rs  mod.rs  state.rs
crates/krabbykrus-core/: Cargo.toml
crates/krabbykrus-core/src/: agent.rs  config.rs  credential_bridge.rs  gateway.rs  lib.rs  web_ui.rs
crates/krabbykrus-credentials/: Cargo.toml
crates/krabbykrus-credentials/examples/: test_vault.rs
crates/krabbykrus-credentials/src/: manager.rs
crates/krabbykrus-llm/: Cargo.toml
crates/krabbykrus-llm/examples/: test_oauth.rs
crates/krabbykrus-llm/src/: anthropic.rs  lib.rs  openai.rs
crates/krabbykrus-tools/: Cargo.toml
crates/krabbykrus-tools/src/: builtin.rs  lib.rs
crates/rockbot/: Cargo.toml
crates/rockbot-agent/: Cargo.toml
crates/rockbot-agent/src/: agent.rs  error.rs  guardrails.rs  hooks.rs  lib.rs  orchestration.rs  sandbox.rs  skills.rs  tokenizer.rs
crates/rockbot-butler/src/: lib.rs
crates/rockbot-channels/: Cargo.toml
crates/rockbot-channels-discord/: Cargo.toml
crates/rockbot-channels-discord/src/: lib.rs
crates/rockbot-channels-signal/: Cargo.toml
crates/rockbot-channels-signal/src/: lib.rs
crates/rockbot-channels-telegram/: Cargo.toml
crates/rockbot-channels-telegram/src/: lib.rs
crates/rockbot-channels/src/: lib.rs
crates/rockbot-chat/: Cargo.toml
crates/rockbot-chat/src/: lib.rs
crates/rockbot-cli/: Cargo.toml
crates/rockbot-cli/src/: lib.rs
crates/rockbot-cli/src/commands/: agent.rs  cert.rs  config.rs  credentials.rs  doctor.rs  (+6 more)
crates/rockbot-client/: Cargo.toml
crates/rockbot-client/src/: client.rs  lib.rs  remote_exec.rs
crates/rockbot-config/: Cargo.toml
crates/rockbot-config/src/: config.rs  error.rs  lib.rs  message.rs
crates/rockbot-core/: Cargo.toml
crates/rockbot-core/src/: a2a.rs  agent.rs  config.rs  credential_bridge.rs  cron.rs  error.rs  gateway.rs  guardrails.rs  hooks.rs  indexer.rs  lib.rs  message.rs  metrics.rs  orchestration.rs  remote_exec.rs  sandbox.rs  session.rs  skills.rs  slash_commands.rs  telemetry.rs  tokenizer.rs  trajectory.rs  web_ui.rs
crates/rockbot-credentials/: Cargo.toml
crates/rockbot-credentials-schema/: Cargo.toml
crates/rockbot-credentials/src/: audit.rs  crypto.rs  error.rs  lib.rs  manager.rs  permissions.rs  storage.rs  types.rs
crates/rockbot-deploy/: Cargo.toml
crates/rockbot-deploy/src/: config.rs  credentials.rs  dns.rs  error.rs  lib.rs  s3.rs
crates/rockbot-doctor/: Cargo.toml
crates/rockbot-doctor/src/: diagnosis.rs  learned.rs  lib.rs  migration.rs  prompts.rs  repair.rs  storage.rs
crates/rockbot-editor/: Cargo.toml
crates/rockbot-editor/src/: lib.rs
crates/rockbot-gateway/: Cargo.toml
crates/rockbot-gateway/src/: cron.rs  error.rs  gateway.rs  routing.rs  slash_commands.rs
crates/rockbot-llm/: Cargo.toml
crates/rockbot-llm-anthropic/: Cargo.toml
crates/rockbot-llm-anthropic/src/: lib.rs
crates/rockbot-llm-bedrock/src/: lib.rs
crates/rockbot-llm-ollama/: Cargo.toml
crates/rockbot-llm-ollama/src/: lib.rs
crates/rockbot-llm-openai/src/: lib.rs
crates/rockbot-llm/src/: anthropic.rs  bedrock.rs  lib.rs  openai.rs
crates/rockbot-memory/: Cargo.toml
crates/rockbot-memory/src/: lib.rs
crates/rockbot-overseer/: Cargo.toml
crates/rockbot-overseer/src/: commands.rs  inference.rs  judgments.rs  lib.rs
crates/rockbot-pki/: Cargo.toml
crates/rockbot-pki/src/: backend.rs  ca.rs  index.rs  lib.rs  manager.rs
crates/rockbot-plugins/: Cargo.toml
crates/rockbot-plugins/src/: lib.rs
crates/rockbot-security/: Cargo.toml
crates/rockbot-security/src/: lib.rs
crates/rockbot-session/: Cargo.toml
crates/rockbot-session/src/: lib.rs
crates/rockbot-shell/: Cargo.toml
crates/rockbot-shell/src/: lib.rs
crates/rockbot-storage/: Cargo.toml
crates/rockbot-storage-runtime/: Cargo.toml
crates/rockbot-storage-runtime/src/: lib.rs
crates/rockbot-storage/src/: encrypted_backend.rs  lib.rs
crates/rockbot-store/: Cargo.toml
crates/rockbot-store/src/: lib.rs  sync.rs  tables.rs
crates/rockbot-tools/: Cargo.toml
crates/rockbot-tools-credentials/: Cargo.toml
crates/rockbot-tools-credentials/src/: lib.rs
crates/rockbot-tools-markdown/: Cargo.toml
crates/rockbot-tools-mcp/: Cargo.toml
crates/rockbot-tools-mcp/src/: lib.rs
crates/rockbot-tools/src/: builtin.rs  lib.rs
crates/rockbot-tui/: Cargo.toml
crates/rockbot-tui/src/: app.rs  doctor_tui.rs  effects.rs  event.rs  keybindings.rs  lib.rs  search.rs  state.rs
crates/rockbot-ui-model/src/: lib.rs
crates/rockbot-vdisk/: Cargo.toml
crates/rockbot-vdisk/src/: lib.rs
crates/rockbot-webui/src/: lib.rs  render.rs
crates/rockbot/src/: main.rs
docs/: FEATURES.md  README.md  api.md  feature-evaluation.md
docs/architecture/: agent-topology-and-vdisk-architecture-proposal.md  crates.md  deep-code-review-remediation-plan.md  encrypted-storage-pki-architecture-plan.md  encrypted-storage-pki-refactor-proposal.md  overview.md  pki.md  security.md  vault-replication.md  virtual-disk-architecture-plan.md
docs/user-guide/: configuration.md  getting-started.md  sandboxing.md  tui-guide.md
examples/: demo.rs  test_vault.rs
tests/post-build/: lib.sh  perf_binary_size.sh  perf_help_no_runtime.sh  perf_startup_syscalls.sh  perf_startup_time.sh  run.sh  sec_no_exec_on_help.sh  sec_no_network.sh  sec_no_sensitive_reads.sh  sec_no_world_writable.sh
(+34 files in other folders)
