[package]
name = "krabbykrus-channels"
version = "0.1.0"
edition = "2021"
description = "Communication channels for Krabbykrus"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Discord support
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"], optional = true }
tokio-stream = "0.1"
time = "0.3"  # For serenity timestamp conversion

# Telegram support  
teloxide = { version = "0.12", features = ["macros"], optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["discord", "telegram"]
discord = ["dep:serenity"]
telegram = ["dep:teloxide", "dep:reqwest"]