[package]
name = "rockbot-security"
version.workspace = true
edition = "2021"
description = "Security and sandboxing for RockBot"
license = "MIT"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }