[package]
name = "rockbot-vdisk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
aes = "0.8.4"
redb = "2"
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xts-mode = "0.5.1"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
